# coords-transform

./: .dockerignore  Dockerfile  README.md  database.py  fly.toml  main.py  models.py  pyproject.toml  requirements.txt
bruno/CRS Transformation and Query API/: bruno.json  collection.bru
bruno/CRS Transformation and Query API/transform/: Query Projection.bru  folder.bru
bruno/FastAPI/: Query Crs.bru  Query Projection.bru  Transform Coordinates.bru  collection.bru
bruno/FastAPI/environments/: prod.bru
models/: api_models.py  crs_model.py  db_models.py
services/: crs_service.py
