[project]
name = "coords-transform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "dotenv>=0.9.9",
    "fastapi[standard]==0.128.0",
    "pyproj==3.7.2",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
